--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.49.10",
     "@tailwindcss/vite": "^4.1.8",
     "lucide": "^0.511.0",
     "lucide-react": "^0.511.0",
